--- a/monsterMatch.html
+++ b/monsterMatch.html
@@ -26,23 +26,13 @@
 
 <body>
     <div id="quiz-box">
-        <header class="heading">
-            <h1><i class="fa-solid fa-dragon"></i> DungeonMaster Scorner</h1>
+        <header>
+            <h1 class="heading"><i class="fa-solid fa-dragon"></i> DungeonMaster Scorner</h1>
         </header>
-        <div class="nav-items">
-            <main>
-                <nav>
-                    <ul>
-                        <!-- navigation buttons for quizes and other pages -->
-                        <li><a href="monsterFacts.html" class="nav-btn">Monster Facts</a></li>
-                        <li><a href="monsterMatch.html" class="nav-btn">Monster Match</a></li>
-                        <li><a href="signup.html" class="nav-btn">Sign Up</a></li>
-                        <li><a href="feedback.html" class="nav-btn">Feedback</a></li>
-                    </ul>
-                </nav>
-            </main>
-        </div>
+        <main>
 
+        </main>
+        
     </div>
 
     <!-- link javascript sheet -->
