--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
         <header class="heading">
             <h1><i class="fa-solid fa-dragon"></i> DungeonMaster Scorner</h1>
         </header>
+        <div>
+            <br>
+            <p class="words">Herein lies Volo's knowledge, split into quizzes for your entertainment.</p>
+            <br>
+            <p class="words">DO NOT ENTER if ye be faint of heart.</p>
+            <br>
+            <p class="words">The monsters likenesses captured in the Monster Match "game" might be enough to send you to
+                the depths of madness.</p>
+            <br>
+            <p class="words">Ye hath been warned.</p>
+            <br>
+        </div>
         <div class="nav-items">
             <main>
                 <nav>
