added basic layout and assumed ids to monster facts page

--- a/monsterFacts.html
+++ b/monsterFacts.html
@@ -30,9 +30,25 @@
             <h1 class="heading"><i class="fa-solid fa-dragon"></i> DungeonMaster Scorner</h1>
         </header>
         <main>
-
+            <h2>Unveil the extent of your intellect</h2>
+            <!-- empty fields where js will populate -->
+            <!-- question and answers section -->
+            <section>
+                <div id="question"></div>
+                <button id="answerOne"></button>
+                <button id="answerTwo"></button>
+                <button id="answerThree"></button>
+                <button id="answerFour"></button>
+            </section>
+            <section>
+                <!-- score display -->
+                <h3>The sum of your might</h3>
+                <div>
+                    <h4>Tally: <span id="tally">0</span></h4>
+                </div>
+            </section>
         </main>
-        
+
     </div>
 
     <!-- link javascript sheet -->
