added styling for buttons section on monster facts page, added event listener to ensure dom loads prior to js running

--- a/monsterFacts.html
+++ b/monsterFacts.html
@@ -33,7 +33,7 @@
             <h2>Unveil the extent of your intellect</h2>
             <!-- empty fields where js will populate -->
             <!-- question and answers section -->
-            <section>
+            <section id="questions-answers-section">
                 <div id="question"></div>
                 <button id="answerOne"></button>
                 <button id="answerTwo"></button>
