--- a/monsterFacts.html
+++ b/monsterFacts.html
@@ -35,10 +35,10 @@
             <!-- question and answers section -->
             <section id="questions-answers-section">
                 <div id="question"></div>
-                <button id="answerOne"></button>
-                <button id="answerTwo"></button>
-                <button id="answerThree"></button>
-                <button id="answerFour"></button>
+                <button id="answer-one"></button>
+                <button id="answer-two"></button>
+                <button id="answer-three"></button>
+                <button id="answer-four"></button>
             </section>
             <section>
                 <!-- score display -->
