created event listeners and check answer functions. added home button and restart button to html

--- a/monsterFacts.html
+++ b/monsterFacts.html
@@ -47,6 +47,11 @@
                     <h4>Tally: <span id="tally">0</span></h4>
                 </div>
             </section>
+            <section id="once-more">
+                <h3>Do you dare try again?</h3>
+                <button onclick="restartGame()">Absolutely!</button>
+                <button id="home-btn" onclick="goHome()">Escort me back to my place of origin</button>
+              </section>
         </main>
 
     </div>
