tweaked the wording on the buttons, added styling for the once more section

--- a/monsterFacts.html
+++ b/monsterFacts.html
@@ -49,7 +49,7 @@
             </section>
             <section id="once-more">
                 <h3>Do you dare try again?</h3>
-                <button onclick="restartGame()">Absolutely!</button>
+                <button onclick="restartGame()">Once more, with vigor</button>
                 <button id="home-btn" onclick="goHome()">Escort me back to my place of origin</button>
               </section>
         </main>
