--- a/signup.html
+++ b/signup.html
@@ -29,14 +29,29 @@
         <header>
             <h1 class="heading"><i class="fa-solid fa-dragon"></i> DungeonMaster Scorner</h1>
         </header>
-        <main>
-
-        </main>
-        
+        <h3>Enlist thy name in our sacred scrolls:</h3>
+        <br>
+        <p id="errors"></p>
+        <form id="registration-form" method="POST" action="https://formdump.codeinstitute.net/">
+            <div class="username">
+                <label for="username">Username:</label>
+                <input id="username" name="username" type="text" class="text-box" required>
+            </div>
+            <br>
+            <div class="password">
+                <label for="password">Password:</label>
+                <input id="password" name="password" type="password" class="text-box" required>
+            </div>
+            <br>
+            <input type="submit" class="submit-button">
+        </form>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.js"
+            integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
+        <script src="index.js"></script>
     </div>
 
     <!-- link javascript sheet -->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/signup.js"></script>
 </body>
 
 </html>
