--- a/signup.html
+++ b/signup.html
@@ -44,10 +44,12 @@
             </div>
             <br>
             <input type="submit" class="submit-button">
+            
         </form>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.js"
             integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
         <script src="index.js"></script>
+        <button id="home-btn" onclick="goHome()">Escort me back to my place of origin</button>
     </div>
 
     <!-- link javascript sheet -->
