feedback page made for sign up form completion, styling added and home button

--- a/feedback.html
+++ b/feedback.html
@@ -24,19 +24,22 @@
     <link rel="manifest" href="assets/favicon/site.webmanifest">
 </head>
 
-<body>
+<body id="feedback-form">
     <div id="quiz-box">
         <header>
             <h1 class="heading"><i class="fa-solid fa-dragon"></i> DungeonMaster Scorner</h1>
         </header>
         <main>
-
+            <h3>Alas! This is not a true scroll of records. This realm was crafted as a humble endeavor for learning and
+                growth. We are most grateful for your visit to our domain! Should you wish to return to the enchanted
+                web, kindly click the button down below. Rest assured, no trace of your passage has been inscribed.
+            </h3>
+            <button id="home-btn" onclick="goHome()">Escort me back to my place of origin</button>
         </main>
-        
     </div>
 
     <!-- link javascript sheet -->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/feedback.js"></script>
 </body>
 
 </html>
