--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
         <h3>Enlist thy name in our sacred scrolls:</h3>
         <br>
         <p id="errors"></p>
-        <form id="registration-form" method="POST" action="https://formdump.codeinstitute.net/">
+        <form id="registration-form" method="GET" action="./feedback.html">
             <div class="username">
                 <label for="username">Username:</label>
                 <input id="username" name="username" type="text" class="text-box" required>
