changed names on files to follow guidlines

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <nav>
                     <ul>
                         <!-- navigation buttons for quizes and other pages -->
-                        <li><a href="monsterFacts.html" class="nav-btn">Monster Facts</a></li>
-                        <li><a href="monsterMatch.html" class="nav-btn">Monster Match</a></li>
+                        <li><a href="monster-facts.html" class="nav-btn">Monster Facts</a></li>
+                        <li><a href="monster-match.html" class="nav-btn">Monster Match</a></li>
                         <li><a href="signup.html" class="nav-btn">Sign Up</a></li>
                     </ul>
                 </nav>
