--- a/monster-match.html
+++ b/monster-match.html
@@ -60,7 +60,7 @@
     </div>
 
     <!-- link javascript sheet -->
-    <script src="assets/js/monsterMatch.js"></script>
+    <script src="assets/js/monster-match.js"></script>
 </body>
 
 </html>
